# xnt-wrapper

./: Anchor.toml  DEPLOYMENT_GUIDE.md  README.md  package.json
programs/xnt-wrapper/: Cargo.toml
programs/xnt-wrapper/idl/: xnt_wrapper.json
programs/xnt-wrapper/src/: lib.rs
scripts/: initialize-simple.js  initialize.ts  test-wrap-unwrap.ts
utils/: xnt-wrapper-utils.ts
