[package]
name = "xnt-wrapper"
version = "0.1.0"
description = "XNT Native Token Wrapper Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xnt_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
